Fixed test case issue